cmake_minimum_required(VERSION 3.20)
project(hot_100 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(hash)
add_subdirectory(two-pointers)
add_subdirectory(sliding-window)
add_subdirectory(substring)
add_subdirectory(array)
add_subdirectory(matrix)
add_subdirectory(linked-list)
add_subdirectory(binary-tree)
add_subdirectory(graph)
add_subdirectory(backtracking)
add_subdirectory(binary-search)
add_subdirectory(stack)
add_subdirectory(heap)
add_subdirectory(greedy)
add_subdirectory(dynamic-programming)
add_subdirectory(dp-multidimensional)
add_subdirectory(techniques)